Initial app to app messaging

--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
         <script type="text/javascript">
             function main () {
                 console.log("running main");
-                var app = window.samplerApp = new SamplerApp();
+                var app = window.app = new SamplerApp();
                 app.start();
             }
             
