More ui updates. Update sampler version.

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,10 @@ under the License.
 			}
 
 			if (window.cordova) {
+				window.shouldRotateToOrientation = function(degrees) {
+					return true;
+				}
+
 				document.addEventListener("deviceready", function () {
 					main();
 				});
